@@ -68,16 +68,4 @@ Group | scribite:: | Weblinks:: | comment
 #######################################
 ###   Hint for the pending module   ###
 #######################################
-http://code.zikula.org/pendingcontent
-
-Name: New Links
-URL:  index.php?module=weblinks&amp;type=admin&amp;func=linkview
-SQL:  SELECT count(*) from links_links WHERE status=0
-
-Name: Broken Links
-URL:  index.php?module=weblinks&amp;type=admin&amp;func=listbrokenlinks
-SQL:  SELECT count(*) from links_links WHERE status=2
-
-Name: Modify Links
-URL:  index.php?module=weblinks&amp;type=admin&amp;func=listmodrequests
-SQL:  SELECT count(*) from links_links WHERE status=3
+pending content now works automatically without configuration. Simply check the box in the admin settings.
